[workspace]
members = [
  "crates/coinset-clvm-core",
  "crates/coinset-inspect-core",
  "crates/coinset-ffi",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.0"

[workspace.dependencies]
anyhow = "1.0.102"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

chia-consensus = "0.36.1"
chia-bls = "0.36.1"
chia-protocol = { version = "0.36.1", features = ["serde"] }
chia-traits = "0.36.1"
clvm-utils = "0.36.1"
clvmr = "=0.16.2"
chialisp = "0.4.1"
