[package]
name = "coinset-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "coinset"
crate-type = ["staticlib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

coinset-inspect-core = { path = "../coinset-inspect-core" }
coinset-clvm-core = { path = "../coinset-clvm-core" }

[dev-dependencies]
chia-protocol.workspace = true
clvm-utils.workspace = true
