[package]
name = "coinset-inspect-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true

chia-consensus.workspace = true
chia-bls.workspace = true
chia-protocol.workspace = true
chia-traits.workspace = true
clvm-utils.workspace = true
clvmr.workspace = true
chialisp.workspace = true
chia-puzzle-types.workspace = true
chia-sdk-driver.workspace = true
chia-sdk-types.workspace = true
